test/fails/bad_parsing/constants2.lgl
void main() {
    print 0.0.0;
}
